feat: Add Dockerfile & docker-compose.yml for easybuggy